# ChangeLog for app-admin/pprocm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/pprocm/ChangeLog,v 1.3 2007/06/06 23:57:16 mcummings Exp $

  06 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  pprocm-0.9_beta2.ebuild:
  Marking amd64 stable

*pprocm-0.9_beta2 (12 Feb 2007)

  12 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +pprocm-0.9_beta2.ebuild:
  Version bump

*pprocm-0.9_beta1 (25 Jan 2007)

  25 Jan 2007; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +pprocm-0.9_beta1.ebuild:
  Bug 162831
