@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/pprocm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/pprocm/ChangeLog,v 1.3 2007/06/06 23:57:16 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/pprocm/ChangeLog,v 1.4 2007/06/07 00:00:12 mcummings Exp $
+
+*pprocm-1.0 (06 Jun 2007)
+
+  06 Jun 2007; Michael Cummings <mcummings@gentoo.org> +pprocm-1.0.ebuild:
+  Version bump
 
   06 Jun 2007; Michael Cummings <mcummings@gentoo.org>
   pprocm-0.9_beta2.ebuild:
